--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+body {
+  background-image: url("..//images/bootport.jpg");
+  background-size: 100%;
+  z-index: 0;
+
+}
+
 .navbar-brand {
   margin-left: 30px;
   background: #a44445;
@@ -8,7 +15,7 @@
 
 }
 
-.navbar-nav {
+.nav-item {
   float: right;
   margin-right: 30px;
   color: #777777;
