--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,17 @@ body {
 
 .navbar-brand {
   margin-left: 30px;
-  background: #a44445;
+  background: #4aaaa5;
   font-size: 20px;
   color: #fff;
   text-align: center;
   float: left;
-
+  height: 100px;
+  font-family: "Georgia", Times, Times New Roman, serif;
+  align-content: center;
+  width: 100%;
+  padding: 10px;
+  float: left;
 }
 
 .nav-item {
@@ -24,4 +29,166 @@ body {
 
 nav {
   margin-bottom: 50px;
+}
+
+body {
+  margin: 0;
+  background-image: url("../images/adriel-kloppenburg-14824.jpg");
+  background-size: 100%;
+  z-index: 0;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: rgb(223, 223, 223);
+  margin: auto;
+  padding: 0px 150px;
+}
+
+.topnav a {
+  float: left;
+  color: #777777;
+  text-align: center;
+  padding: 30px 30px;
+  text-decoration: none;
+  font-size: 20px;
+  margin: auto;
+}
+
+.topnav a:hover {
+  background-color: #4aaaa5;
+  color: rgb(243, 243, 243);
+}
+
+.topnav a.active {
+  background-color: #4aaaa5;
+  color: #ffffff;
+  padding-left: 50px;
+  font-size: 27px;
+  align-content: center;
+}
+
+#pic {
+  padding: 16px 16px;
+  border-radius: 50%;
+  float: left;
+}
+
+.jumbotron {
+  background-color: rgb(223, 223, 223);
+  padding: 30px 30px;
+  z-index: 1;
+  height: 100%;
+}
+
+.card {
+  background-color: rgb(223, 223, 223);
+  align-content: center;
+  padding: 16px 16px;
+
+}
+
+.section3 {
+  margin: 50px 20px 50px 150px;
+  height: 500px;
+  width: 670px;
+  background-color: rgb(223, 223, 223);
+  padding: 30px 30px;
+  z-index: 1;
+  float: left;
+}
+
+
+footer {
+  position: fixed;
+  bottom: 10px;
+  width: 100%;
+}
+
+h3 {
+  color: rgb(223, 223, 223);
+  text-align: center;
+  padding: 10px;
+
+
+}
+
+h1 {
+  padding-left: 30px;
+  font-family: "Georgia", Times, Times New Roman, serif;
+  font-size: 24px;
+  color: #4aaaa5;
+}
+
+h4 {
+  text-align: center;
+  font-family: "Georgia", Times, Times New Roman, serif;
+  font-size: 24px;
+  color: #4aaaa5;
+}
+
+.social {
+  height: 70px;
+  width: 70px;
+  align-content: center;
+}
+
+p {
+  font-family: "Georgia", Times, Times New Roman, serif;
+  font-size: 18px;
+  float: left;
+  padding-top: 17px;
+  color: #777777;
+  line-height: 1.8;
+}
+
+img {
+  padding: 16px 16px;
+  float: left;
+}
+
+#bus {
+  padding: 25px 25px;
+  align-content: center;
+  width: 265px;
+  height: 195px;
+}
+
+form {
+  line-height: 1.5;
+  color: #777777;
+  font-family: "Georgia", Times, Times New Roman, serif;
+  font-size: 21px;
+}
+
+.section2 {
+  margin: 50px 20px 50px 150px;
+  height: 750px;
+  width: 670px;
+  background-color: rgb(223, 223, 223);
+  padding: 30px 30px;
+  z-index: 1;
+  float: left;
+  align-content: center;
+}
+
+.display {
+  vertical-align: top;
+  display: inline-block;
+  text-align: center;
+  font-family: "Georgia", Times, Times New Roman, serif;
+  color: #777777;
+  font-size: 20px;
+}
+
+.caption {
+  display: block;
+}
+
+#email {
+  color: #d37f12;
+}
+
+* {
+  box-sizing: border-box;
 }
