--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,33 +10,25 @@ body {
   background: #4aaaa5;
   font-size: 20px;
   color: #fff;
-  text-align: center;
-  float: left;
   height: 100px;
   font-family: "Georgia", Times, Times New Roman, serif;
-  align-content: center;
-  width: 100%;
-  padding: 10px;
+  padding: 30px;
   float: left;
+
 }
 
-.nav-item {
+.nav-link {
   float: right;
-  margin-right: 30px;
+  margin: 0px 50px;
   color: #777777;
-  font-size: 16px;
+  font-size: 20px;
+
 }
 
 nav {
   margin-bottom: 50px;
 }
 
-body {
-  margin: 0;
-  background-image: url("../images/adriel-kloppenburg-14824.jpg");
-  background-size: 100%;
-  z-index: 0;
-}
 
 .topnav {
   overflow: hidden;
@@ -79,12 +71,18 @@ body {
   padding: 30px 30px;
   z-index: 1;
   height: 100%;
+  margin-bottom: 65px;
+}
+
+.row {
+  margin: 30px;
 }
 
 .card {
   background-color: rgb(223, 223, 223);
   align-content: center;
   padding: 16px 16px;
+  margin-bottom: 15px;
 
 }
 
@@ -100,17 +98,16 @@ body {
 
 
 footer {
+  width: 100%;
+  text-align: center;
   position: fixed;
   bottom: 10px;
-  width: 100%;
 }
 
 h3 {
   color: rgb(223, 223, 223);
-  text-align: center;
-  padding: 10px;
-
-
+  font-family: "Georgia", Times, Times New Roman, serif;
+  font-size: 16px;
 }
 
 h1 {
